# how-do-i-set-up-torch-with-uv

./: README.md  Run.ps1  hello.py  pyproject.toml
